--- a/raport.tex
+++ b/raport.tex
@@ -76,6 +76,8 @@
 	\end{center}
 	\clearpage
 	\section[htb]{Prosta gra 3D}
+	W ramach tutorialu z YouTube stworzyłem prostą grę 3D, w której gracz porusza kulą po planszy. Proces tworzenia był podobny
+	do tego w przypadku gry 2D, jednakże z różnicami wynikającymi z wprowadzenia trzeciego wymiaru.
 \end{sloppypar}
 
 \end{document}
