--- a/raport.tex
+++ b/raport.tex
@@ -78,6 +78,20 @@
 	\section[htb]{Prosta gra 3D}
 	W ramach tutorialu z YouTube stworzyłem prostą grę 3D, w której gracz porusza kulą po planszy. Proces tworzenia był podobny
 	do tego w przypadku gry 2D, jednakże z różnicami wynikającymi z wprowadzenia trzeciego wymiaru.
+	Tutaj także pozwoliłem sobie na drobne modyfikacje wzorca z tutorialu. Zmieniłem tekstury, w tym podłogi głównej sceny, tło i cieniowanie.
+	Zmieniłem także wygląd ekranu startowego oraz "game over".
+	\begin{center}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=1\textwidth]{3d/start-screen.png}
+			\caption{Ekran startowy}
+		\end{figure}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=1\textwidth]{3d/progress1.png}
+			\caption{Progress 1 - gracz i nałożona gridmapa}
+		\end{figure}
+	\end{center}
 \end{sloppypar}
 
 \end{document}
